// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryShot Testing - Shallow Render Storyshots typography/Details.stories.tsx Details | Compact 1`] = `
<ForwardRef>
  <ForwardRef
    compact={true}
  >
    Property
  </ForwardRef>
  <ForwardRef
    compact={true}
  >
    Value
  </ForwardRef>
</ForwardRef>
`;

exports[`StoryShot Testing - Shallow Render Storyshots typography/Details.stories.tsx Details | Large 1`] = `
<ForwardRef>
  <ForwardRef
    large={true}
  >
    Property
  </ForwardRef>
  <ForwardRef
    large={true}
  >
    Value
  </ForwardRef>
</ForwardRef>
`;

exports[`StoryShot Testing - Shallow Render Storyshots typography/Details.stories.tsx Details 1`] = `
<ForwardRef>
  <ForwardRef>
    Property
  </ForwardRef>
  <ForwardRef>
    Value
  </ForwardRef>
</ForwardRef>
`;
